Code/latest_log.txt
[Sat Mar 12 19:06:40 CST 2016] =========================================== 
Traceback (most recent call last):
  File "light_parser.py", line 3, in <module>
    from light_semantic_controller import *
  File "/Users/Beto/TEC/Compiladores/Proyecto Final/Code/light_semantic_controller.py", line 35
    if !(name in self.vars):
       ^
SyntaxError: invalid syntax

[Sat Mar 12 19:09:26 CST 2016] =========================================== 
Traceback (most recent call last):
  File "light_parser.py", line 3, in <module>
    from light_semantic_controller import *
  File "/Users/Beto/TEC/Compiladores/Proyecto Final/Code/light_semantic_controller.py", line 37
    self.next_var_id++
                     ^
SyntaxError: invalid syntax

[Sat Mar 12 19:09:37 CST 2016] =========================================== 
Traceback (most recent call last):
  File "light_parser.py", line 3, in <module>
    from light_semantic_controller import *
  File "/Users/Beto/TEC/Compiladores/Proyecto Final/Code/light_semantic_controller.py", line 37
    self.next_var_id++
                     ^
SyntaxError: invalid syntax

[Sat Mar 12 19:09:48 CST 2016] =========================================== 
Traceback (most recent call last):
  File "light_parser.py", line 3, in <module>
    from light_semantic_controller import *
  File "/Users/Beto/TEC/Compiladores/Proyecto Final/Code/light_semantic_controller.py", line 74
    print "Semantic Error: " type " '" + name + "' already defined\n"
                                ^
SyntaxError: invalid syntax

[Sat Mar 12 19:09:56 CST 2016] =========================================== 
Traceback (most recent call last):
  File "light_parser.py", line 3, in <module>
    from light_semantic_controller import *
  File "/Users/Beto/TEC/Compiladores/Proyecto Final/Code/light_semantic_controller.py", line 74
    print "Semantic Error: " + type " '" + name + "' already defined\n"
                                       ^
SyntaxError: invalid syntax

[Sat Mar 12 19:10:04 CST 2016] =========================================== 
Traceback (most recent call last):
  File "light_parser.py", line 3, in <module>
    from light_semantic_controller import *
  File "/Users/Beto/TEC/Compiladores/Proyecto Final/Code/light_semantic_controller.py", line 42, in <module>
    class FunctionTable:
  File "/Users/Beto/TEC/Compiladores/Proyecto Final/Code/light_semantic_controller.py", line 44, in FunctionTable
    'program' : Function('program', type_dict['void'])
TypeError: __init__() takes exactly 4 arguments (3 given)

[Sat Mar 12 19:10:49 CST 2016] =========================================== 
Successful

[Sat Mar 12 20:04:11 CST 2016] =========================================== 
Traceback (most recent call last):
  File "light_parser.py", line 3, in <module>
    from light_semantic_controller import *
  File "/Users/Beto/TEC/Compiladores/Proyecto Final/Code/light_semantic_controller.py", line 16, in <module>
    tmp_var = Var()
NameError: name 'Var' is not defined

[Sat Mar 12 20:04:34 CST 2016] =========================================== 
Traceback (most recent call last):
  File "light_parser.py", line 3, in <module>
    from light_semantic_controller import *
  File "/Users/Beto/TEC/Compiladores/Proyecto Final/Code/light_semantic_controller.py", line 53, in <module>
    class FunctionTable:
  File "/Users/Beto/TEC/Compiladores/Proyecto Final/Code/light_semantic_controller.py", line 55, in FunctionTable
    'program' : Function(0, 'program', type_dict['void'])
TypeError: __init__() takes exactly 1 argument (4 given)

[Sat Mar 12 20:06:02 CST 2016] =========================================== 
Traceback (most recent call last):
  File "light_parser.py", line 3, in <module>
    from light_semantic_controller import *
  File "/Users/Beto/TEC/Compiladores/Proyecto Final/Code/light_semantic_controller.py", line 105, in <module>
    tmp_function = Function()
TypeError: __init__() takes exactly 4 arguments (1 given)

[Sat Mar 12 20:14:17 CST 2016] =========================================== 
WARNING: Token 'VAR_BOOLEAN' defined, but not used
WARNING: There is 1 unused token
WARNING: Symbol 'var_a' is unreachable
WARNING: Symbol 'var_b' is unreachable
Generating LALR tables
WARNING: 4 shift/reduce conflicts
Traceback (most recent call last):
  File "light_parser.py", line 516, in <module>
    parser.parse(data, tracking=True)
  File "/Users/Beto/TEC/Compiladores/Proyecto Final/Code/ply/yacc.py", line 329, in parse
    return self.parseopt(input, lexer, debug, tracking, tokenfunc)
  File "/Users/Beto/TEC/Compiladores/Proyecto Final/Code/ply/yacc.py", line 815, in parseopt
    p.callable(pslice)
  File "light_parser.py", line 402, in p_vars_prim
    tmp_var.type = type_dict[p[0]]
KeyError: None

[Sat Mar 12 20:16:50 CST 2016] =========================================== 
Traceback (most recent call last):
  File "light_parser.py", line 517, in <module>
    parser.parse(data, tracking=True)
  File "/Users/Beto/TEC/Compiladores/Proyecto Final/Code/ply/yacc.py", line 329, in parse
    return self.parseopt(input, lexer, debug, tracking, tokenfunc)
  File "/Users/Beto/TEC/Compiladores/Proyecto Final/Code/ply/yacc.py", line 815, in parseopt
    p.callable(pslice)
  File "light_parser.py", line 402, in p_vars_prim
    print "VARS_PRIM " + p[0]
TypeError: cannot concatenate 'str' and 'NoneType' objects

[Sat Mar 12 20:18:55 CST 2016] =========================================== 
None
None
None
None
None
None
None
None
None
None
None
None
None
Traceback (most recent call last):
  File "light_parser.py", line 517, in <module>
    parser.parse(data, tracking=True)
  File "/Users/Beto/TEC/Compiladores/Proyecto Final/Code/ply/yacc.py", line 329, in parse
    return self.parseopt(input, lexer, debug, tracking, tokenfunc)
  File "/Users/Beto/TEC/Compiladores/Proyecto Final/Code/ply/yacc.py", line 815, in parseopt
    p.callable(pslice)
  File "light_parser.py", line 14, in p_program
    funtion_stack.push(p[0])
NameError: global name 'funtion_stack' is not defined

[Sat Mar 12 20:19:54 CST 2016] =========================================== 
None
None
None
None
None
None
None
None
None
None
None
None
None
Traceback (most recent call last):
  File "light_parser.py", line 520, in <module>
    parser.parse(data, tracking=True)
  File "/Users/Beto/TEC/Compiladores/Proyecto Final/Code/ply/yacc.py", line 329, in parse
    return self.parseopt(input, lexer, debug, tracking, tokenfunc)
  File "/Users/Beto/TEC/Compiladores/Proyecto Final/Code/ply/yacc.py", line 815, in parseopt
    p.callable(pslice)
  File "light_parser.py", line 17, in p_program
    funtion_stack.push(p[0])
NameError: global name 'funtion_stack' is not defined

[Sat Mar 12 20:20:10 CST 2016] =========================================== 
None
None
None
None
None
None
None
None
None
None
None
None
None
Successful

[Sat Mar 12 20:21:00 CST 2016] =========================================== 
None
None
None
None
None
None
None
None
None
None
None
None
None
Successful

[Sat Mar 12 20:21:07 CST 2016] =========================================== 
None
None
None
None
None
None
None
None
None
None
None
None
None
Successful

[Sat Mar 12 20:21:50 CST 2016] =========================================== 
<type 'instance'>
None
<type 'instance'>
None
<type 'instance'>
None
<type 'instance'>
None
<type 'instance'>
None
<type 'instance'>
None
<type 'instance'>
Successful

[Sat Mar 12 20:25:15 CST 2016] =========================================== 
None
None
None
None
None
None
None
None
None
None
None
None
None
None
None
None
None
None
None
None
None
Successful

[Sat Mar 12 20:25:39 CST 2016] =========================================== 
int
int
int
int
decimal
int
string
int
int
int
int
int
int
int
int
int
int
int
int
int
int
Successful
